# mini-chef

./: .gitignore  AGENTS.md  PRD.md  PRD_V1.md  README.md  download_video.py  get_reel_details.py  main.py  pyproject.toml  recipe_generator.py  snapinsta_downloader.py  transcribe_wav.py  utils.py  video_downloader.py  video_processor.py  whisper_test.py
MiniChef/: MiniChefApp.swift
MiniChef/Models/: Recipe.swift
MiniChef/Views/: ContentView.swift  RecipeDetailView.swift  RecipeFormView.swift
apps/ios/MiniChef/MiniChef/: MiniChefApp.swift
apps/ios/MiniChef/MiniChef.xcodeproj/: project.pbxproj
apps/ios/MiniChef/MiniChef.xcodeproj/project.xcworkspace/xcuserdata/nicoricaldi.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ios/MiniChef/MiniChef.xcodeproj/xcuserdata/nicoricaldi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
apps/ios/MiniChef/MiniChef.xcodeproj/xcuserdata/nicoricaldi.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/ios/MiniChef/MiniChef/Views/: ContentView.swift  CookBookView.swift  RecipeDetailView.swift  RecipeFormView.swift
docs/: MVP_SPEC.md
services/extraction/: AGENTS.md  get_reel_details.py  pyproject.toml  recipe_generator.py  utils.py  video_downloader.py
