[project]
name = "mini-chef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "easyocr>=1.7.2",
    "lxml>=6.0.2",
    "openai-whisper>=20250625",
    "opencv-python>=4.13.0.92",
    "playwright>=1.58.0",
    "requests>=2.32.5",
]
